persoonlijke info en foto

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -74,9 +74,9 @@
                 </div>
                 <div class="col s12 m3">
                     <div class="icon-block">
-                        <img src="img/foto-arne.jpg" alt="foto van developer Arne" class="circle responsive-img">
-                        <h5 class="center">Arne Sas</h5>
-                        <p class="light">Arne Sas is al sinds zijn 16 jaar bezig met het maken van website, doorheen deze tijd is het een passie geworden en probeert hij altijd mee te zijn met de laatste nieuwe trends. Van projecten waar er uit de box gedacht moet worden, is hij altijd te vinden.</p>
+                        <img src="img/foto_gillian.jpg" alt="foto van developer Gillian Heyns" class="circle responsive-img">
+                        <h5 class="center">Gillian Heyns</h5>
+                        <p class="light">Hij zit in het eerste jaar toegepaste informatica. Hij heeft voordien gewerkt als vrachtwagenchauffeur, tijdens deze periode was hij nog steeds bezig met IT. Computer problemen oplossen is zijn hobby, geen enkel probleem gaat hij uit de weg. Naast zijn IT passie is hij ook actief als scheidsrechter in de provincie Antwerpen.</p>
                     </div>
                 </div>
             </div>
@@ -164,4 +164,6 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
 
-</body></html>
+</body>
+
+</html>
