--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -60,16 +60,16 @@
                 </div>
                 <div class="col s12 m3">
                     <div class="icon-block">
-                        <img src="img/foto-arne.jpg" alt="foto van developer Arne" class="circle responsive-img">
+                        <img src="img/ARNEDC.JPG" alt="foto van developer Arne" class="circle responsive-img">
                         <h5 class="center">Arne Sas</h5>
                         <p class="light">Arne Sas is al sinds zijn 16 jaar bezig met het maken van website, doorheen deze tijd is het een passie geworden en probeert hij altijd mee te zijn met de laatste nieuwe trends. Van projecten waar er uit de box gedacht moet worden, is hij altijd te vinden.</p>
                     </div>
                 </div>
                 <div class="col s12 m3">
                     <div class="icon-block">
-                        <img src="img/foto-arne.jpg" alt="foto van developer Arne" class="circle responsive-img">
-                        <h5 class="center">Arne Sas</h5>
-                        <p class="light">Arne Sas is al sinds zijn 16 jaar bezig met het maken van website, doorheen deze tijd is het een passie geworden en probeert hij altijd mee te zijn met de laatste nieuwe trends. Van projecten waar er uit de box gedacht moet worden, is hij altijd te vinden.</p>
+                        <img src="img/foto-arne.jpg" alt="foto van developer Arne De Cnodder" class="circle responsive-img">
+                        <h5 class="center">Arne De Cnodder</h5>
+                        <p class="light">Arne De Cnodder is een student die het leren nog niet moe is. In 2019 is hij afgestudeerd aan Thomas More in Vorselaar als leraar secundair onderwijs behaald. Toch koos hij ervoor om zijn passie, programmeren en webdesign, beter onder de knie te krijgen.</p>
                     </div>
                 </div>
                 <div class="col s12 m3">
@@ -164,4 +164,6 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
 
-</body></html>
+</body>
+
+</html>
