de teksten van de pagina zijn aangepast

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -31,13 +31,11 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <br><br>
-                <h1 class="header center teal-text text-lighten-2">gna-design</h1>
+                <h1 class="header center teal-text text-lighten-2">gnadesign</h1>
                 <div class="row center">
                     <h5 class="header col s12 light">Webdesign zit in ons dna.</h5>
                 </div>
-                <div class="row center">
-                    <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-                </div>
+               
                 <br><br>
 
             </div>
@@ -93,7 +91,7 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center">
-                    <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+                    <h5 class="header col s12 light">Houdt u van interactieve website's of wilt u er zelf een?</h5>
                 </div>
             </div>
         </div>
@@ -107,7 +105,7 @@
                 <div class="col s12 center">
                     <h3><i class="mdi-content-send brown-text"></i></h3>
                     <h4>Waar kan je ons vinden?</h4>
-                    <p class="left-align light">We hebben een twitter pagina waar we tweets plaatsen over en tijdens ons project. maar ook kan je ons altijd aanspreken in de gangen van Thomas More te Geel.</p>
+                    <p class="left-align light">We hebben een twitter pagina waar we tweets plaatsen over en tijdens ons project. Maar ook kan je ons altijd aanspreken in de gangen van Thomas More te Geel.</p>
                 </div>
             </div>
 
@@ -119,7 +117,7 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center">
-                    <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+                    <h5 class="header col s12 light">wilt u de meest vernieuwende en aansprekende website?</h5>
                 </div>
             </div>
         </div>
@@ -131,7 +129,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Over ons</h5>
-                    <p class="grey-text text-lighten-4">Wij zijn 4 studenten van het eerste jaar uit de IT factory van Thomas More in Geel. en voor ons keuzeproject van App moeten wij een website maken van een webdisign bureau.</p>
+                    <p class="grey-text text-lighten-4">Wij zijn 4 studenten van het eerste jaar uit de IT factory van Thomas More in Geel. en voor ons keuzeproject van App moeten wij een website maken van een webdesign bureau.</p>
 
 
                 </div>
