titel en head gedeelte aanpassen en favicon en css

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -4,13 +4,17 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Parallax Template - Materialize</title>
+    <title>GNA design</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <meta name="author" content="Arne Sas, Arne Van Beethoven, Arne De Cnodder, Gillian Heyns">
+    <meta name="description" content="Welkom bij GNA design! Wij zijn 4 studenten uit het eerste jaar van de IT-factory van Thomas More in Geel. Voor ons keuzeproject van App moeten wij een website maken van een webdesign bureau.">
+    <meta name="keywords" content="webdesign, Thomas More, IT factory">
 </head>
 
 <body>
@@ -32,13 +36,13 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <br><br>
- 
+
                 <h1 class="header center text-lighten-2">GNA design</h1>
 
                 <div class="row center">
                     <h5 class="header col s12 light ondertitel">Webdesign zit in ons dna.</h5>
                 </div>
-               
+
                 <br><br>
 
             </div>
@@ -70,21 +74,21 @@
                 </div>
                 <div class="col s12 m3">
                     <div class="icon-block">
-                        <img src="img/58590385_349069042625051_874885190382518272_n%20Cropped%20(1).jpg" alt="foto van developer Arne De Cnodder" class="circle responsive-img">
+                        <img src="img/Arneresize.jpg" alt="foto van developer Arne De Cnodder" class="circle responsive-img">
                         <h5 class="center">Arne De Cnodder</h5>
                         <p class="light">Arne De Cnodder is een student die het leren nog niet moe is. In 2019 is hij afgestudeerd aan Thomas More in Vorselaar en heeft hij het diploma leraar secundair onderwijs behaald. Toch koos hij ervoor om zijn passie, programmeren en webdesign, beter onder de knie te krijgen door een opleiding te volgen aan Thomas More in Geel.</p>
 
                     </div>
-                    <div class="col s12 m3">
-                        <div class="icon-block">
-                            <img src="img/foto_gillian.jpg" alt="foto van developer Gillian Heyns" class="circle responsive-img">
-                            <h5 class="center">Gillian Heyns</h5>
-                            <p class="light">Hij zit in het eerste jaar toegepaste informatica. Hij heeft voordien gewerkt als vrachtwagenchauffeur, tijdens deze periode was hij nog steeds bezig met IT. Computer problemen oplossen is zijn hobby, geen enkel probleem gaat hij uit de weg. Naast zijn IT passie is hij ook actief als scheidsrechter in de provincie Antwerpen.</p>
-                        </div>
+                </div>
+                <div class="col s12 m3">
+                    <div class="icon-block">
+                        <img src="img/foto_gillian.jpg" alt="foto van developer Gillian Heyns" class="circle responsive-img">
+                        <h5 class="center">Gillian Heyns</h5>
+                        <p class="light">Hij zit in het eerste jaar toegepaste informatica. Hij heeft voordien gewerkt als vrachtwagenchauffeur, tijdens deze periode was hij nog steeds bezig met IT. Computer problemen oplossen is zijn hobby, geen enkel probleem gaat hij uit de weg. Naast zijn IT passie is hij ook actief als scheidsrechter in de provincie Antwerpen.</p>
                     </div>
                 </div>
-            
             </div>
+
         </div>
     </div>
 
@@ -131,7 +135,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Over ons</h5>
-                    <p class="grey-text text-lighten-4">Wij zijn 4 studenten van het eerste jaar uit de IT factory van Thomas More in Geel. en voor ons keuzeproject van App moeten wij een website maken van een webdesign bureau.</p>
+                    <p class="grey-text text-lighten-4">Wij zijn 4 studenten van het eerste jaar uit de IT factory van Thomas More in Geel. Voor ons keuzeproject van App moeten wij een website maken van een webdesign bureau.</p>
 
 
                 </div>
@@ -158,6 +162,4 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
 
-</body>
-
-</html>
+</body></html>
