--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -22,7 +22,10 @@
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo">Logo</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#developers">developers</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#developers">Developers</a></li>
+                <li><a href="#waar">Waar?</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
 
             <ul id="nav-mobile" class="sidenav">
@@ -34,7 +37,7 @@
 
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
-            <div class="container">
+            <div class="container brand">
                 <br><br>
 
                 <h1 class="header center text-lighten-2">GNA design</h1>
@@ -53,10 +56,11 @@
 
     <div class="container">
 
-        <div class="section">
+        <div class="section" id="developers">
 
             <!--   Icon Section   -->
             <div class="row">
+                <h3 class="center">Developers</h3>
                 <div class="col s12 m3">
                     <div class="icon-block">
                         <img src="img/foto-arne%20Cropped.jpg" alt="foto van developer Arne Sas" class="circle responsive-img">
@@ -107,7 +111,7 @@
     <div class="container">
         <div class="section">
 
-            <div class="row">
+            <div class="row" id="waar">
                 <div class="col s12 center">
                     <h3><i class="mdi-content-send brown-text"></i></h3>
                     <h4>Waar kan je ons vinden?</h4>
@@ -132,7 +136,7 @@
 
     <footer class="page-footer teal">
         <div class="container">
-            <div class="row">
+            <div class="row" id="contact">
                 <div class="col l6 s12">
                     <h5 class="white-text">Over ons</h5>
                     <p class="grey-text text-lighten-4">Wij zijn 4 studenten van het eerste jaar uit de IT factory van Thomas More in Geel. Voor ons keuzeproject van App moeten wij een website maken van een webdesign bureau.</p>
@@ -142,6 +146,7 @@
                 <div class="col l3 s12">
                     <h5 class="white-text">Contact</h5>
                     <ul>
+                        <li><a class="white-text" href="#developers">Wie zijn wij</a></li>
                         <li><a class="white-text" href="#developers">Wie zijn wij</a></li>
                         <li><a class="white-text" href="#!">twitter</a></li>
                     </ul>
