--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -50,7 +50,7 @@
 
             </div>
         </div>
-        <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="img/Tech_img.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
 
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="img/background-blank-business-composition-583848.jpg" alt="Unsplashed background img 2"></div>
     </div>
 
     <div class="container">
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+        <div class="parallax"><img src="img/background-beverage-breakfast-brown-414645.jpg" alt="Unsplashed background img 3"></div>
     </div>
 
     <footer class="page-footer teal">
