fotos verder gecompressed

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="img/background-blank-business-composition-583848.jpg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="img/background-blank-business-commerce-583847.jpg" alt="Unsplashed background img 2"></div>
     </div>
 
     <div class="container">
@@ -167,4 +167,6 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
 
-</body></html>
+</body>
+
+</html>
