--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -20,7 +20,9 @@
 <body>
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo">Logo</a>
+            <a id="logo-container" href="#" class="brand-logo">
+                <img id="logo" src="img/logo_gnadesign_klein.svg" alt="logo gna design">
+            </a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#">Home</a></li>
                 <li><a href="#developers">Developers</a></li>
