--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -31,7 +31,10 @@
             </ul>
 
             <ul id="nav-mobile" class="sidenav">
-                <li><a href="#developers">developers</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#developers">Developers</a></li>
+                <li><a href="#waar">Waar?</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
