alles onder 200kb en overbodige foto's verwijderd

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="img/background-blank-business-commerce-583847.jpg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="img/background-blank-business-composition-583848.jpg" alt="Unsplashed background img 2"></div>
     </div>
 
     <div class="container">
@@ -169,6 +169,4 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
 
-</body>
-
-</html>
+</body></html>
