--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -136,7 +136,7 @@
         <div class="parallax"><img src="img/background-beverage-breakfast-brown-414645.jpg" alt="Unsplashed background img 3"></div>
     </div>
 
-    <footer class="page-footer teal">
+    <footer class="page-footer">
         <div class="container">
             <div class="row" id="contact">
                 <div class="col l6 s12">
@@ -169,6 +169,4 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
 
-</body>
-
-</html>
+</body></html>
