taal verandert en link naar actie min en twitter link in footer

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -9,6 +9,7 @@
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -97,6 +98,13 @@
                     </div>
                 </div>
             </div>
+            <div>
+                <h3 class="center">Ons project voor actie MiN</h3>
+                <h6 class="center">(Klik op de foto om ons eerste project te bekijken)</h6>
+                <div class="actie_min">
+                    <a href=""><img src="img/actie_min_brood.jpg" alt="foto met link naar website MiN" class="responsive-img image"></a>
+                </div>
+            </div>
 
         </div>
     </div>
@@ -120,8 +128,9 @@
                 <div class="col s12 center">
                     <h3><i class="mdi-content-send brown-text"></i></h3>
                     <h4>Waar kan je ons vinden?</h4>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2502.1743438590697!2d4.959249515962638!3d51.16057514382263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c14c011b4bcb87%3A0xb5b970e9f2a6ce42!2sThomas%20More%20-%20Campus%20Geel!5e0!3m2!1snl!2sbe!4v1579768566095!5m2!1snl!2sbe" width="700" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
                     <p class="left-align light">We hebben een Twitter pagina waar we tweets plaatsen over en tijdens ons project. Maar ook kan je ons altijd aanspreken in de gangen van Thomas More te Geel.</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2502.1743438590697!2d4.959249515962638!3d51.16057514382263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c14c011b4bcb87%3A0xb5b970e9f2a6ce42!2sThomas%20More%20-%20Campus%20Geel!5e0!3m2!1snl!2sbe!4v1579768566095!5m2!1snl!2sbe" width="700" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                 </div>
             </div>
 
@@ -151,11 +160,7 @@
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Contact</h5>
-                    <ul>
-                        <li><a class="white-text" href="#developers">Wie zijn wij</a></li>
-                        <li><a class="white-text" href="#developers">Wie zijn wij</a></li>
-                        <li><a class="white-text" href="#!">twitter</a></li>
-                    </ul>
+                    <a href="#" class="fa fa-twitter"></a>
                 </div>
 
             </div>
