--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -120,8 +120,10 @@
                 <div class="col s12 center">
                     <h3><i class="mdi-content-send brown-text"></i></h3>
                     <h4>Waar kan je ons vinden?</h4>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2502.1743438590697!2d4.959249515962638!3d51.16057514382263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c14c011b4bcb87%3A0xb5b970e9f2a6ce42!2sThomas%20More%20-%20Campus%20Geel!5e0!3m2!1snl!2sbe!4v1579768566095!5m2!1snl!2sbe" width="700" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     <p class="left-align light">We hebben een Twitter pagina waar we tweets plaatsen over en tijdens ons project. Maar ook kan je ons altijd aanspreken in de gangen van Thomas More te Geel.</p>
+                    <iframe class="col s12 col m6"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2502.1743438590697!2d4.959249515962638!3d51.16057514382263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c14c011b4bcb87%3A0xb5b970e9f2a6ce42!2sThomas%20More%20-%20Campus%20Geel!5e0!3m2!1snl!2sbe!4v1579768566095!5m2!1snl!2sbe" width="700" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                     <a class="twitter-timeline col s12 col m6" data-width="350" data-height="500" href="https://twitter.com/saske7_7?ref_src=twsrc%5Etfw">Tweets by saske7_7</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    
                 </div>
             </div>
 
@@ -134,6 +136,20 @@
             <div class="container">
                 <div class="row center">
                     <h5 class="header col s12 light">Wilt u de meest vernieuwende en aansprekende website?</h5>
+                    <div class="container linken">
+                        <p class="col m3">De site van 
+                            <a  href="https://r0784221.sinners.be/">Arne Van Beethoven</a>
+                        </p>
+                        <p class="col m3">De site van 
+                            <a  href="https://r0784221.sinners.be/">Arne Sas</a>
+                        </p>
+                        <p class="col m3">De site van 
+                            <a  href="https://r0784221.sinners.be/">Arne De Cnodder</a>
+                        </p>
+                        <p class="col m3">De site van 
+                            <a  href="https://r0784221.sinners.be/">Gillian Heyns</a>
+                        </p>
+                        </div>
                 </div>
             </div>
         </div>
