nav bar ongewijzigd

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -18,24 +18,27 @@
 </head>
 
 <body>
-    <nav class="white" role="navigation">
-        <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo">
-                <img id="logo" src="img/logo_gnadesign_klein.svg" alt="logo gna design">
-            </a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="#">Home</a></li>
-                <li><a href="#developers">Developers</a></li>
-                <li><a href="#waar">Waar?</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="#developers">developers</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        </div>
-    </nav>
+        <nav class="white" role="navigation">
+            <div class="nav-wrapper container">
+                <a id="logo-container" href="#" class="brand-logo">
+                    <img id="logo" src="img/logo_gnadesign_klein.svg" alt="logo gna design">
+                </a>
+                <ul class="right hide-on-med-and-down ">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#developers">Developers</a></li>
+                    <li><a href="#waar">Waar?</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+        
+                <ul id="nav-mobile" class="sidenav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#developers">Developers</a></li>
+                    <li><a href="#waar">Waar?</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            </div>
+        </nav>
 
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
@@ -90,7 +93,7 @@
                     <div class="icon-block">
                         <img src="img/foto_gillian.jpg" alt="foto van developer Gillian Heyns" class="circle responsive-img">
                         <h5 class="center">Gillian Heyns</h5>
-                        <p class="light">Hij zit in het eerste jaar toegepaste informatica. Hij heeft voordien gewerkt als vrachtwagenchauffeur, tijdens deze periode was hij nog steeds bezig met IT. Computer problemen oplossen is zijn hobby, geen enkel probleem gaat hij uit de weg. Naast zijn IT passie is hij ook actief als scheidsrechter in de provincie Antwerpen.</p>
+                        <p class="light">Gillian Heyns zit in het eerste jaar toegepaste informatica. Hij heeft voordien gewerkt als vrachtwagenchauffeur, tijdens deze periode was hij nog steeds bezig met IT. Computer problemen oplossen is zijn hobby, geen enkel probleem gaat hij uit de weg. Naast zijn IT passie is hij ook actief als scheidsrechter in de provincie Antwerpen.</p>
                     </div>
                 </div>
             </div>
