start van startpagina met taalkeuze

--- a/min/index.html
+++ b/min/index.html
@@ -8,14 +8,28 @@
     <title>Document</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen" />
-    <link href="css/min.css" type="text/css" rel="stylesheet" media="screen" /> </head>
+    <link href="css/min.css" type="text/css" rel="stylesheet" media="screen" />
+</head>
 
 <body>
-    <h1>MIN</h1>
+    <div class="background">
+        <img src="img/actie_min_brood.jpg" alt="achtergrondfoto startpagina" class="responsive-img hide-on-med-and-down">
+        <h1 class="titel">Logo Hier</h1>
+        <div class="talen">
+            <ul>
+                <li><a href=""><img src="img/vlaggen/1200px-Flag_of_the_Netherlands.png" alt="" class="responsive-img">Nederlands</a></li>
+                <li><a href="">Frans</a></li>
+                <li><a href="">Engels</a></li>
+                <li><a href="">Russisch</a></li>
+                <li><a href="">Arabisch</a></li>
+            </ul>
+        </div>
+    </div>
+
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-</body>
-
-</html>
+</body></html>
