startpagina compleet start

--- a/min/index.html
+++ b/min/index.html
@@ -17,14 +17,16 @@
 <body>
     <div class="background">
         <img src="img/actie_min_brood.jpg" alt="achtergrondfoto startpagina" class="responsive-img hide-on-med-and-down">
+        <h3 class="center">Welkom bij</h3>
         <h1 class="titel">Logo Hier</h1>
         <div class="talen">
             <ul>
-                <li><a href=""><img src="img/vlaggen/1200px-Flag_of_the_Netherlands.png" alt="" class="responsive-img">Nederlands</a></li>
-                <li><a href="">Frans</a></li>
-                <li><a href="">Engels</a></li>
-                <li><a href="">Russisch</a></li>
-                <li><a href="">Arabisch</a></li>
+                <li><a href=""><img src="img/vlaggen/1200px-Flag_of_the_Netherlands.png" alt="" class="responsive-img">&nbsp;|
+                        <span>Nederlands</span></a></li>
+                <li><a href=""><img src="img/vlaggen/1200px-Flag_of_France.svg.png" alt="" class="responsive-img">&nbsp;| <span>Frans</span></a></li>
+                <li><a href=""><img src="img/vlaggen/Flag_of_Great_Britain_(English_version).png" alt="" class="responsive-img">&nbsp;| <span>Engels</span></a></li>
+                <li><a href=""><img src="img/vlaggen/russian-federation-flag.jpg" alt="" class="responsive-img">&nbsp;| <span>Russisch</span></a></li>
+                <li><a href=""><img src="img/vlaggen/main-qimg-adf6ae10ae207f13d5c66cb486b51bb0.png" alt="" class="responsive-img">&nbsp;| <span>Arabisch</span></a></li>
             </ul>
         </div>
     </div>
