homepagina gemaakt en kleine errors gefixt

--- a/min/index.html
+++ b/min/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="talen">
             <ul>
-                <li><a href=""><img src="img/vlaggen/1200px-Flag_of_the_Netherlands.png" alt="" class="responsive-img">&nbsp;|
+                <li><a href="nl/home.html"><img src="img/vlaggen/1200px-Flag_of_the_Netherlands.png" alt="" class="responsive-img">&nbsp;|
                         <span>Nederlands</span></a></li>
                 <li><a href=""><img src="img/vlaggen/1200px-Flag_of_France.svg.png" alt="" class="responsive-img">&nbsp;| <span>Frans</span></a></li>
                 <li><a href=""><img src="img/vlaggen/Flag_of_Great_Britain_(English_version).png" alt="" class="responsive-img">&nbsp;| <span>Engels</span></a></li>
@@ -36,4 +36,6 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-</body></html>
+</body>
+
+</html>
