logo in home en index

--- a/min/index.html
+++ b/min/index.html
@@ -20,7 +20,7 @@
         <img src="img/actie_min_brood.jpg" alt="achtergrondfoto startpagina" class="responsive-img hide-on-med-and-down">
         <div class="titel">
             <h3 class="">Welkom bij</h3>
-            <h1 class="">Logo Hier</h1>
+            <img src="img/logo_min_klein.svg" alt="logo min">
         </div>
         <div class="talen">
             <ul>
