--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
+   
     <nav>
+       <img id="logo" src="../img/logo_min_klein.svg" alt="logo min">
         <!-- Nog in te vullen -->
     </nav>
 
