voornamelijk footer gefixt

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -19,7 +19,7 @@
         <!-- Nog in te vullen -->
     </nav>
 
-    <div class="container">
+    <div class="container txt">
         <h1 class="center">Home</h1>
         <div class="row valign-wrapper">
             <div class="col s12 m6">
@@ -41,6 +41,48 @@
             </div>
         </div>
     </div>
+    <footer class="footer center-align">
+        <div class="row center-align">
+            <div class="col s12 m4">
+                <h4>contactgegevens </h4>
+
+                <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
+
+                <p>Kleding/huisraad/speelgoed <br> Gsm: 0468/58 51 39</p>
+
+                <p>Email: <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
+
+                <p>bankrekening: <br>
+                    BE29 7512 0621 4764 <br>
+                    BIC: AXABBE22
+                </p>
+            </div>
+            <div class="col s12 m4">
+                <h4>adressen:</h4>
+                <p>Maatschappelijke zetel: <br>
+                    Bresserdijk 4 <br>
+                    2400 Mol</p>
+                <br>
+                <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
+                <br>
+                <a href="https://www.w3schools.com/howto/howto_css_social_media_buttons.asp" class="fa fa-facebook"></a>
+
+            </div>
+            <div class="col s12 m4 maps">
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.5532704525053!2d5.121459915320794!3d51.19045617958424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135ab180b037d%3A0xfa96d446291438f!2sBresserdijk%204%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579784547227!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen="" class="responsive-img"></iframe>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.570124284178!2d5.101584315758331!3d51.190145579584176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135a10a9a19c1%3A0x9111c9cf6d01fb2c!2sSint-Apollonialaan%20198%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579781606517!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: GNA design</p>
+
+            </div>
+        </div>
+    </footer>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="../js/materialize.min.js"></script>
 </body></html>
