eerste deel activiteiten.html

--- a/min/index.html
+++ b/min/index.html
@@ -20,7 +20,8 @@
         <img src="img/actie_min_brood.jpg" alt="achtergrondfoto startpagina" class="responsive-img hide-on-med-and-down">
         <div class="titel">
             <h3 class="">Welkom bij</h3>
-            <img src="img/logo_min_klein.svg" alt="logo min">
+            <a href="#"><img src="img/logo_min_klein.svg" alt="logo min"></a>
+            
         </div>
         <div class="talen">
             <ul>
