--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -17,7 +17,7 @@
 <body>
    
     <nav>
-       <img id="logo" src="../img/logo_min_klein.svg" alt="logo min">
+       <a href="#"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
         <!-- Nog in te vullen -->
     </nav>
 
