--- a/min/nl/op=op.html
+++ b/min/nl/op=op.html
@@ -8,9 +8,8 @@
     <title>Document</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen" />
     <link href="../css/min.css" type="text/css" rel="stylesheet" media="screen" />
@@ -42,7 +41,7 @@
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Home</a></li>
+               <li><a href="sass.html">Home</a></li>
                 <li><a href="badges.html">OP=OP</a></li>
                 <li><a href="collapsible.html">Activiteiten</a></li>
                 <li><a href="sass.html">Sponsors</a></li>
@@ -69,37 +68,85 @@
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
-
         <div class="container">
-
-            <h1 class="center">Home</h1>
-            <p>Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
-
+            <h1 class="center">OP=OP</h1>
             <div class="row">
-
-                <div class="col s12 l6">
-                    <p>We zetten ons belangeloos in voor mensen die het moeilijk hebben, door naar hen te luisteren, begrip te tonen, directe noden te lenigen en vervolgens met hen mee op pad te gaan, zoekend naar een oplossing voor hun problemen.
+                <div class="col s12 m6">
+                    <p>
+                        Iedere zaterdagochtend bedelen wij voedsel in ons winkeltje ‘OP=OP’, waar mensen
+                        terecht kunnen die zelf geen of onvoldoende middelen hebben om voor zichzelf of hun
+                        gezin gezonde en waardige voeding aan te schaffen.
+                        De voeding is de hefboom om de mensen tot bij ons te krijgen en om zo samen te
+                        zoeken naar voldoende financiële middelen, zodat ze weer voor zichzelf kunnen zorgen;
+                        Elke week zorgen we voor een mooi aanbod van verse groenten en fruit. Op dinsdag en
+                        donderdag bieden we gratis extra brood aan.
                     </p>
+
+                    <p>
+                        Wekelijks helpen we zo’n 140 gezinnen.
+                        Actie Min heeft ondertussen ongeveer 200 leden, die in aanmerking komen. Reeds
+                        meer dan 450 families hoeven niet langer op onze hulp te rekenen.
+                        We bevinden ons in de St. Apollonialaan 198 in Mol achter het buurtrestaurant
+                        “Apollon”.
+                    </p>
+
                 </div>
-                <div class="col s12 l6 center-align">
-                    <img src="../img/groepsfoto_metcamion.jpg" alt="Groepsfoto met camion" class="responsive-img">
+
+                <div class="col s12 m6 hide-on-small-and-down">
+                    <img src="../img/voedsebedeling.jpg" alt="foto van voedselbedeling" class="responsive-img">
                 </div>
             </div>
+            <br>
+
             <hr>
             <div class="row">
                 <div class="col s12 m6">
-                    <p>Op de dag van vandaag zijn wij een groep van 50 gedreven vrijwilligers die Actie voert voor Mensen In Nood, ongeacht welk hun geloof, kleur, of politieke overtuiging is. Wij zijn solidair met mensen die het moeten stellen met een leefloon, budgetbeheer of die gebukt gaan onder collectieve schuldbemiddeling. Ook voor mensen die uitgeprocedeerd zijn en geen enkele vorm van inkomen meer hebben trachten we er te zijn en mee op pad te gaan om oplossingen te zoeken.</p>
+                    <p>
+                        Voedselbedeling – Enkel voor leden. Iedereen dient zich aanmelden bij de registratie
+                        boven in de wachtruimte.
+                    </p>
+                    <ul class="list">
+                        <li>St. Apollonialaan 198 in Mol </li>
+                        <li>Elke zaterdag tussen 8u30 en 12 u</li>
+                        <li>Laatste registratie om 11u30</li>
+                    </ul>
                 </div>
                 <div class="col s12 m6">
-                    <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
+                    <p>
+                        Broodbedeling – enkel voor leden (ingang langs achterkant)
+                    </p>
+                    <ul class="list">
+                        <li>St. Apollonialaan 198 in Mol </li>
+                        <li>Elke dinsdag tussen 10 u en 12 u</li>
+                        <li>Elke donderdag tussen 10 u en 12u</li>
+
+                    </ul>
                 </div>
+            </div>
+            <div class="row">
+
+
+                <br>
+                <p class="col s6 offset-s3">
+                    Om in aanmerking te komen, komen we langs voor een intake gesprek. Wie beneden
+                    de armoedegrens leeft, komt in aanmerking voor onze voedselbedeling. We werken met
+                    een lidkaart met vervaldag. Zo’n lidkaart is gratis. We vragen 2 € voor de
+                    zaterdagbedeling om onze werkingskosten te dekken.
+                </p>
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
     <footer class="footer center-align">
         <div class="row center-align">
             <div class="col s12 l4">
-                <h4>contactgegevens </h4>
+                <h5>contactgegevens </h5>
 
                 <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
                 <hr>
@@ -114,14 +161,14 @@
                 </p>
             </div>
             <div class="col s12 l4">
-                <h4>adressen</h4>
+                <h5>adressen</h5>
                 <p>Maatschappelijke zetel <br>
                     Bresserdijk 4 <br>
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
-                  <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px">
-                  <br>
+                <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px">
+                <br>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
@@ -154,4 +201,5 @@
             $(".dropdown-trigger").dropdown();
         });
     </script>
+
 </body></html>
