--- a/min/nl/activiteiten.html
+++ b/min/nl/activiteiten.html
@@ -5,41 +5,171 @@
     <meta charset="UTF-8">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Onze activiteiten</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen" />
     <link href="../css/min.css" type="text/css" rel="stylesheet" media="screen" />
 </head>
 
 <body>
+    <!-- Dropdown Structure -->
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href="#!">Nederlands</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Frans</a></li>
+        <li><a href="#!">Engels</a></li>
+        <li><a href="#!">Russisch</a></li>
+        <li><a href="#!">Arabisch</a></li>
 
-    <nav>
-        <a href="#"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
-        <!-- Nog in te vullen -->
+    </ul>
+    <ul id="dropdown2" class="dropdown-content">
+        <li><a href="#">Selecteer je taal</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Nederlands</a></li>
+        <li><a href="#!">Frans</a></li>
+        <li><a href="#!">Engels</a></li>
+        <li><a href="#!">Russisch</a></li>
+        <li><a href="#!">Arabisch</a></li>
+
+    </ul>
+    <nav class="blue">
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="sass.html">Home</a></li>
+                <li><a href="badges.html">OP=OP</a></li>
+                <li><a href="collapsible.html">Activiteiten</a></li>
+                <li><a href="sass.html">Sponsors</a></li>
+                <li><a href="badges.html">Partners</a></li>
+                <li><a href="sass.html">Historiek</a></li>
+                <li><a href="badges.html">Doneren?</a></li>
+                <!-- Dropdown Trigger -->
+                <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
+            </ul>
+        </div>
+
     </nav>
 
-    <div class="container">
-        <h1 class="center">Onze activiteiten</h1>
-        <p>Actie MIN organiseert samen met haar partners activiteiten voor de doelgroep:</p>
 
-        <p>Eindejaarsactie dankzij Rozenberg en Lions Club.</p>
-        <p>Elk jaar organiseert De Rozenbergschool een Sinterklaas/Eindejaarsactie met de leerlingen van 1ste en 2de graad. De jongeren gaan fondsen werven door allerlei acties te organiseren. De opbrengst is deels voor Ons Huis, Lichtpunt en Actie Min. In 2019 kregen 195 kinderen een cadeaubon van Dreamland.</p>
+    <div class="txt">
 
-        <p>Familiedag</p>
-        <p>Een twee jaarlijks evenement waar iedereen uit de doelgroep wordt uitgenodigd. We zorgen voor een warme maaltijd en kinderen kunnen zich uitleven met allerlei spelletjes. Een fijn samenzijn om elkaar beter te leren kennen.</p>
+        <ul class="sidenav" id="mobile-demo">
+            <li><a href="sass.html">Home</a></li>
+            <li><a href="badges.html">OP=OP</a></li>
+            <li><a href="collapsible.html">Activiteiten</a></li>
+            <li><a href="sass.html">Sponsors</a></li>
+            <li><a href="badges.html">Partners</a></li>
+            <li><a href="sass.html">Historiek</a></li>
+            <li><a href="badges.html">Doneren?</a></li>
+            <!-- Dropdown Trigger -->
+            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
+        </ul>
 
-        <p>Dag van de opvoeding</p>
-        <p>samen met het ‘Huis van het kind’. Onze ouders met jonge kinderen krijgen gratis toegang tot het Zilvermeer, waar allerlei leuke evenementen worden georganiseerd. Wij zorgen dat onze leden een drankje en ijsje kunnen consumeren.</p>
-        
-        <p>Lions gezinsdag</p>
-        <p>Welzijnschakels uit de regio werden uitgenodigd voor een ganse namiddag zich uit te leven met allerlei volkspelen.</p>
-        
-        <p>Leo’s Club</p>
-        <p>onze doelgroep kreeg twee jaar geleden de kans om naar de Olmse Zoo de bezoeken. Een maaltijd en drankje was inclusief. Een fijne namiddag voor jong en oud, waar iedereen in volle teugen van genoten heeft. In 2019 konden we met een ganse bus naar Bellewaerde. Iedereen kreeg voldoende drankbonnetjes en een maaltijd aangeboden. Voor onze kinderen een superdag!</p>
+        <div class="container">
+            <h1 class="center">Onze activiteiten</h1>
+            <h3 class="center">Actie MIN organiseert samen met haar partners activiteiten voor de doelgroep</h4>
+
+            <div class="row">
+                <div class="col s12 l6 para">
+                    <h4 class="center">Eindejaarsactie dankzij Rozenberg en Lions Club.</h4>
+                    <p>Elk jaar organiseert De Rozenbergschool een Sinterklaas/Eindejaarsactie met de leerlingen van 1ste en 2de graad. De jongeren gaan fondsen werven door allerlei acties te organiseren. De opbrengst is deels voor Ons Huis, Lichtpunt en Actie Min. In 2019 kregen 195 kinderen een cadeaubon van Dreamland.</p>
+                </div>
+                <div class="col s12 l6 para">
+                    <h4 class="center">Familiedag</h4>
+                    <p>Een twee jaarlijks evenement waar iedereen uit de doelgroep wordt uitgenodigd. We zorgen voor een warme maaltijd en kinderen kunnen zich uitleven met allerlei spelletjes. Een fijn samenzijn om elkaar beter te leren kennen.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12 l6 para">
+                    <h4 class="center">Dag van de opvoeding</h4>
+                    <p>samen met het ‘Huis van het kind’. Onze ouders met jonge kinderen krijgen gratis toegang tot het Zilvermeer, waar allerlei leuke evenementen worden georganiseerd. Wij zorgen dat onze leden een drankje en ijsje kunnen consumeren.</p>
+                </div>
+                <div class="col s12 l6 para">
+                    <h4 class="center">Lions gezinsdag</h4>
+                    <p>Welzijnschakels uit de regio werden uitgenodigd voor een ganse namiddag zich uit te leven met allerlei volkspelen.</p>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col s12 l6 offset-l3 para">
+                    <h4 class="center">Leo’s Club</h4>
+                    <p>onze doelgroep kreeg twee jaar geleden de kans om naar de Olmse Zoo de bezoeken. Een maaltijd en drankje was inclusief. Een fijne namiddag voor jong en oud, waar iedereen in volle teugen van genoten heeft. In 2019 konden we met een ganse bus naar Bellewaerde. Iedereen kreeg voldoende drankbonnetjes en een maaltijd aangeboden. Voor onze kinderen een superdag!</p>
+                </div>
+
+            </div>
+
+
+
+
+
+
+
+
+
+        </div>
     </div>
+    <footer class="footer center-align">
+        <div class="row center-align">
+            <div class="col s12 l4">
+                <h4>contactgegevens </h4>
+
+                <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
+                <hr>
+                <p>Kleding/huisraad/speelgoed <br> Gsm: 0468/58 51 39</p>
+                <hr>
+                <p>Email: <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
+                <hr>
+                <p>bankrekening <br>
+                    BE29 7512 0621 4764 <br>
+                    BIC: AXABBE22
+                </p>
+            </div>
+            <div class="col s12 l4">
+                <h4>adressen</h4>
+                <p>Maatschappelijke zetel <br>
+                    Bresserdijk 4 <br>
+                    2400 Mol</p>
+                <hr>
+                <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
+                <br>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
+
+            </div>
+            <div class="col s12 l4 maps">
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.5532704525053!2d5.121459915320794!3d51.19045617958424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135ab180b037d%3A0xfa96d446291438f!2sBresserdijk%204%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579784547227!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen="" class="responsive-img"></iframe>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.570124284178!2d5.101584315758331!3d51.190145579584176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c135a10a9a19c1%3A0x9111c9cf6d01fb2c!2sSint-Apollonialaan%20198%2C%202400%20Mol!5e0!3m2!1snl!2sbe!4v1579781606517!5m2!1snl!2sbe" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="">
+                <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: GNA design</p>
+
+            </div>
+        </div>
+    </footer>
     <!--JavaScript at end of body for optimized loading-->
+
     <script type="text/javascript" src="../js/materialize.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="../js/materialize.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.sidenav').sidenav();
+            $(".dropdown-trigger").dropdown();
+        });
+    </script>
 </body></html>
