effect aan p en h4 toegevoegd

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -28,7 +28,7 @@
 
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href="#">Selecteer je taal</a></li>
+        <li><a href="#">Taal</a></li>
         <li class="divider"></li>
         <li><a href="#!">Nederlands</a></li>
         <li><a href="#!">Frans</a></li>
@@ -73,11 +73,12 @@
         <div class="container">
 
             <h1 class="center">Home</h1>
-            <p>Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
+            <p id="opening" class="para">Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
 
             <div class="row">
 
-                <div class="col s12 l6">
+                <div class="col s12 l6 para">
+                    <h4 class="center">Voor wie</h4>
                     <p>We zetten ons belangeloos in voor mensen die het moeilijk hebben, door naar hen te luisteren, begrip te tonen, directe noden te lenigen en vervolgens met hen mee op pad te gaan, zoekend naar een oplossing voor hun problemen.
                     </p>
                 </div>
@@ -86,11 +87,14 @@
                 </div>
             </div>
             <hr>
-            <div class="row">
-                <div class="col s12 m6">
+            <br>
+            <div class="row onder">
+                <div class="col s12 m6 para">
+                    <h4 class="center">Wie zijn we</h4>
                     <p>Op de dag van vandaag zijn wij een groep van 50 gedreven vrijwilligers die Actie voert voor Mensen In Nood, ongeacht welk hun geloof, kleur, of politieke overtuiging is. Wij zijn solidair met mensen die het moeten stellen met een leefloon, budgetbeheer of die gebukt gaan onder collectieve schuldbemiddeling. Ook voor mensen die uitgeprocedeerd zijn en geen enkele vorm van inkomen meer hebben trachten we er te zijn en mee op pad te gaan om oplossingen te zoeken.</p>
                 </div>
-                <div class="col s12 m6">
+                <div class="col s12 m6 para">
+                    <h4 class="center">Hoe gaan we te werk</h4>
                     <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
                 </div>
             </div>
