--- a/min/nl/activiteiten.html
+++ b/min/nl/activiteiten.html
@@ -39,7 +39,7 @@
     </ul>
     <nav class="blue">
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
+            <a href="../nl/home.html" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="sass.html">Home</a></li>
@@ -75,36 +75,36 @@
             <h1 class="center">Onze activiteiten</h1>
             <h3 class="center">Actie MIN organiseert samen met haar partners activiteiten voor de doelgroep</h4>
 
-            <div class="row">
-                <div class="col s12 l6 para">
-                    <h4 class="center">Eindejaarsactie dankzij Rozenberg en Lions Club.</h4>
-                    <p>Elk jaar organiseert De Rozenbergschool een Sinterklaas/Eindejaarsactie met de leerlingen van 1ste en 2de graad. De jongeren gaan fondsen werven door allerlei acties te organiseren. De opbrengst is deels voor Ons Huis, Lichtpunt en Actie Min. In 2019 kregen 195 kinderen een cadeaubon van Dreamland.</p>
-                </div>
-                <div class="col s12 l6 para">
-                    <h4 class="center">Familiedag</h4>
-                    <p>Een twee jaarlijks evenement waar iedereen uit de doelgroep wordt uitgenodigd. We zorgen voor een warme maaltijd en kinderen kunnen zich uitleven met allerlei spelletjes. Een fijn samenzijn om elkaar beter te leren kennen.</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col s12 l6 para">
-                    <h4 class="center">Dag van de opvoeding</h4>
-                    <p>samen met het ‘Huis van het kind’. Onze ouders met jonge kinderen krijgen gratis toegang tot het Zilvermeer, waar allerlei leuke evenementen worden georganiseerd. Wij zorgen dat onze leden een drankje en ijsje kunnen consumeren.</p>
-                </div>
-                <div class="col s12 l6 para">
-                    <h4 class="center">Lions gezinsdag</h4>
-                    <p>Welzijnschakels uit de regio werden uitgenodigd voor een ganse namiddag zich uit te leven met allerlei volkspelen.</p>
-                </div>
-            </div>
-
-            <div class="row">
-
-                <div class="col s12 l6 offset-l3 para">
-                    <h4 class="center">Leo’s Club</h4>
-                    <p>onze doelgroep kreeg twee jaar geleden de kans om naar de Olmse Zoo de bezoeken. Een maaltijd en drankje was inclusief. Een fijne namiddag voor jong en oud, waar iedereen in volle teugen van genoten heeft. In 2019 konden we met een ganse bus naar Bellewaerde. Iedereen kreeg voldoende drankbonnetjes en een maaltijd aangeboden. Voor onze kinderen een superdag!</p>
+                <div class="row">
+                    <div class="col s12 l6 para">
+                        <h4 class="center">Eindejaarsactie dankzij Rozenberg en Lions Club.</h4>
+                        <p>Elk jaar organiseert De Rozenbergschool een Sinterklaas/Eindejaarsactie met de leerlingen van 1ste en 2de graad. De jongeren gaan fondsen werven door allerlei acties te organiseren. De opbrengst is deels voor Ons Huis, Lichtpunt en Actie Min. In 2019 kregen 195 kinderen een cadeaubon van Dreamland.</p>
+                    </div>
+                    <div class="col s12 l6 para">
+                        <h4 class="center">Familiedag</h4>
+                        <p>Een twee jaarlijks evenement waar iedereen uit de doelgroep wordt uitgenodigd. We zorgen voor een warme maaltijd en kinderen kunnen zich uitleven met allerlei spelletjes. Een fijn samenzijn om elkaar beter te leren kennen.</p>
+                    </div>
                 </div>
 
-            </div>
+                <div class="row">
+                    <div class="col s12 l6 para">
+                        <h4 class="center">Dag van de opvoeding</h4>
+                        <p>samen met het ‘Huis van het kind’. Onze ouders met jonge kinderen krijgen gratis toegang tot het Zilvermeer, waar allerlei leuke evenementen worden georganiseerd. Wij zorgen dat onze leden een drankje en ijsje kunnen consumeren.</p>
+                    </div>
+                    <div class="col s12 l6 para">
+                        <h4 class="center">Lions gezinsdag</h4>
+                        <p>Welzijnschakels uit de regio werden uitgenodigd voor een ganse namiddag zich uit te leven met allerlei volkspelen.</p>
+                    </div>
+                </div>
+
+                <div class="row">
+
+                    <div class="col s12 l6 offset-l3 para">
+                        <h4 class="center">Leo’s Club</h4>
+                        <p>onze doelgroep kreeg twee jaar geleden de kans om naar de Olmse Zoo de bezoeken. Een maaltijd en drankje was inclusief. Een fijne namiddag voor jong en oud, waar iedereen in volle teugen van genoten heeft. In 2019 konden we met een ganse bus naar Bellewaerde. Iedereen kreeg voldoende drankbonnetjes en een maaltijd aangeboden. Voor onze kinderen een superdag!</p>
+                    </div>
+
+                </div>
 
 
 
@@ -129,7 +129,8 @@
                 <hr>
                 <p>bankrekening <br>
                     BE29 7512 0621 4764 <br>
-                    BIC: AXABBE22
+                    BIC: AXABBE22 <br>
+                    Ondernemingsnummer : 0639.984.323
                 </p>
             </div>
             <div class="col s12 l4">
@@ -139,6 +140,8 @@
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
+                <a href="https://welzijnsschakels.be/"><img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+
                 <br>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
@@ -171,5 +174,8 @@
             $('.sidenav').sidenav();
             $(".dropdown-trigger").dropdown();
         });
+
     </script>
-</body></html>
+</body>
+
+</html>
