--- a/min/nl/op=op.html
+++ b/min/nl/op=op.html
@@ -19,7 +19,6 @@
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
         <li><a href="#!">Nederlands</a></li>
-        <li class="divider"></li>
         <li><a href="#!">Frans</a></li>
         <li><a href="#!">Engels</a></li>
         <li><a href="#!">Russisch</a></li>
@@ -27,8 +26,6 @@
 
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href="#">Selecteer je taal</a></li>
-        <li class="divider"></li>
         <li><a href="#!">Nederlands</a></li>
         <li><a href="#!">Frans</a></li>
         <li><a href="#!">Engels</a></li>
@@ -41,7 +38,7 @@
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-               <li><a href="sass.html">Home</a></li>
+                <li><a href="sass.html">Home</a></li>
                 <li><a href="badges.html">OP=OP</a></li>
                 <li><a href="collapsible.html">Activiteiten</a></li>
                 <li><a href="sass.html">Sponsors</a></li>
@@ -72,35 +69,37 @@
             <h1 class="center">OP=OP</h1>
             <div class="row">
                 <div class="col s12 m6">
-                    <p>
-                        Iedere zaterdagochtend bedelen wij voedsel in ons winkeltje ‘OP=OP’, waar mensen
-                        terecht kunnen die zelf geen of onvoldoende middelen hebben om voor zichzelf of hun
-                        gezin gezonde en waardige voeding aan te schaffen.
-                        De voeding is de hefboom om de mensen tot bij ons te krijgen en om zo samen te
-                        zoeken naar voldoende financiële middelen, zodat ze weer voor zichzelf kunnen zorgen;
-                        Elke week zorgen we voor een mooi aanbod van verse groenten en fruit. Op dinsdag en
-                        donderdag bieden we gratis extra brood aan.
-                    </p>
-
-                    <p>
-                        Wekelijks helpen we zo’n 140 gezinnen.
-                        Actie Min heeft ondertussen ongeveer 200 leden, die in aanmerking komen. Reeds
-                        meer dan 450 families hoeven niet langer op onze hulp te rekenen.
-                        We bevinden ons in de St. Apollonialaan 198 in Mol achter het buurtrestaurant
-                        “Apollon”.
-                    </p>
+                    <div class="para">
+                        <p>
+                            Iedere zaterdagochtend bedelen wij voedsel in ons winkeltje ‘OP=OP’, waar mensen
+                            terecht kunnen die zelf geen of onvoldoende middelen hebben om voor zichzelf of hun
+                            gezin gezonde en waardige voeding aan te schaffen.
+                            De voeding is de hefboom om de mensen tot bij ons te krijgen en om zo samen te
+                            zoeken naar voldoende financiële middelen, zodat ze weer voor zichzelf kunnen zorgen;
+                            Elke week zorgen we voor een mooi aanbod van verse groenten en fruit. Op dinsdag en
+                            donderdag bieden we gratis extra brood aan.
+                        </p>
+                    </div>
 
                 </div>
-
                 <div class="col s12 m6 hide-on-small-and-down">
                     <img src="../img/voedsebedeling.jpg" alt="foto van voedselbedeling" class="responsive-img">
                 </div>
+            </div>
+            <div class="para offset-s3">
+                <p>
+                    Wekelijks helpen we zo’n 140 gezinnen.
+                    Actie Min heeft ondertussen ongeveer 200 leden, die in aanmerking komen. Reeds
+                    meer dan 450 families hoeven niet langer op onze hulp te rekenen.
+                    We bevinden ons in de St. Apollonialaan 198 in Mol achter het buurtrestaurant
+                    “Apollon”.
+                </p>
             </div>
             <br>
 
             <hr>
             <div class="row">
-                <div class="col s12 m6">
+                <div class="col s12 m6 para">
                     <p>
                         Voedselbedeling – Enkel voor leden. Iedereen dient zich aanmelden bij de registratie
                         boven in de wachtruimte.
@@ -111,7 +110,7 @@
                         <li>Laatste registratie om 11u30</li>
                     </ul>
                 </div>
-                <div class="col s12 m6">
+                <div class="col s12 m6 para">
                     <p>
                         Broodbedeling – enkel voor leden (ingang langs achterkant)
                     </p>
@@ -123,26 +122,18 @@
                     </ul>
                 </div>
             </div>
-            <div class="row">
+            <div class="row para">
 
-
-                <br>
                 <p class="col s6 offset-s3">
                     Om in aanmerking te komen, komen we langs voor een intake gesprek. Wie beneden
                     de armoedegrens leeft, komt in aanmerking voor onze voedselbedeling. We werken met
                     een lidkaart met vervaldag. Zo’n lidkaart is gratis. We vragen 2 € voor de
                     zaterdagbedeling om onze werkingskosten te dekken.
                 </p>
+
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
     <footer class="footer center-align">
         <div class="row center-align">
             <div class="col s12 l4">
