--- a/min/nl/partners_armoedebeleid.html
+++ b/min/nl/partners_armoedebeleid.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Onze activiteiten</title>
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -29,7 +29,7 @@
 
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href="#">Taal</a></li>
+        <li><a href="#">Selecteer je taal</a></li>
         <li class="divider"></li>
         <li><a href="#!">Nederlands</a></li>
         <li><a href="#!">Frans</a></li>
@@ -40,7 +40,7 @@
     </ul>
     <nav class="blue">
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
+            <a href="../nl/home.html" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="sass.html">Home</a></li>
@@ -73,33 +73,24 @@
         </ul>
 
         <div class="container">
-
-            <h1 class="center">Home</h1>
-            <p id="opening" class="para">Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
+            <h1 class="center">Onze partners in armoedebeleid</h1>
 
             <div class="row">
+                <div class="col s12 l6">
+                    <p>Vzw MIN Mol voor donaties van kleding en huisraad en speelgoed (kerk Achterbos)</p>
+                    <p>Gsm : 0468 58 51 39 <br>
+                    Email : min.mol@telenet.be</p>
+                    <p>Onze doelgroep wordt regelmatig uitgenodigd door vzw-Min Mol om spulletjes uit te zoeken.</p>
+                    <p>Ons huis Mol (https://onshuismol.be/)</p>
+                    <p>Bresserdijk 4 - 2400Mol <br>
+                    014 32 04 83 <br>
+                    vierdewereldwerking-mol@skynet.be</p>
+                </div>
+                <div class="col s12 l6">
+                    <img src="../img/vzwmenseninnood.jpg" alt="logo vzw mensen in nood" width="400px" height="200px">
+                </div>
+            </div>
 
-                <div class="col s12 l6 para">
-                    <h4 class="center">Voor wie</h4>
-                    <p>We zetten ons belangeloos in voor mensen die het moeilijk hebben, door naar hen te luisteren, begrip te tonen, directe noden te lenigen en vervolgens met hen mee op pad te gaan, zoekend naar een oplossing voor hun problemen.
-                    </p>
-                </div>
-                <div class="col s12 l6 center-align">
-                    <img src="../img/groepsfoto_metcamion.jpg" alt="Groepsfoto met camion" class="responsive-img">
-                </div>
-            </div>
-            <hr>
-            <br>
-            <div class="row onder">
-                <div class="col s12 m6 para">
-                    <h4 class="center">Wie zijn we</h4>
-                    <p>Op de dag van vandaag zijn wij een groep van 50 gedreven vrijwilligers die Actie voert voor Mensen In Nood, ongeacht welk hun geloof, kleur, of politieke overtuiging is. Wij zijn solidair met mensen die het moeten stellen met een leefloon, budgetbeheer of die gebukt gaan onder collectieve schuldbemiddeling. Ook voor mensen die uitgeprocedeerd zijn en geen enkele vorm van inkomen meer hebben trachten we er te zijn en mee op pad te gaan om oplossingen te zoeken.</p>
-                </div>
-                <div class="col s12 m6 para">
-                    <h4 class="center">Hoe gaan we te werk</h4>
-                    <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
-                </div>
-            </div>
         </div>
     </div>
     <footer class="footer center-align">
@@ -126,7 +117,9 @@
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
-                   <a href="https://welzijnsschakels.be/"><img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                <a href="https://welzijnsschakels.be/"><img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+
+                <br>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
